--- a/public/html/expenses.html
+++ b/public/html/expenses.html
@@ -6,53 +6,53 @@
     <title>Expenses</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <ul>
         <li><a href="expenses.html">Expenses</a></li>
         <li><a href="incomes.html">Incomes</a></li>
       </ul>
-      <h1>Expenses</h1>
+      <h1 class="title">My Money List<span class="title_name">Expenses</span></h1>
     </header>
 
     <section>
-      <h3>Add New expense</h3>
-      <ul class="NewExp">
+      <h3 class="add_new">Add New expense</h3>
+      <ul>
         <span>Date/Time</span>
-          <input type="date" name="date" id="inputdate">
-          <input type="time" name="time" id="inputtime">
+          <input type="date" name="date" id="inputdate" class="inputdate">
+          <input type="time" name="time" id="inputtime" class="inputtime">
         <span>Tag</span>
-          <input type="text" name="tag" id="inputtag">
+          <input type="text" name="tag" id="inputtag" class="inputtag">
         <span>Amount</span>
-          <input type="number" name="amount" id="inputamount">
-        <button type="Save" name="save" id="savebtn">Save</button>
+          <input type="number" name="amount" id="inputamount" class="inputamount">
+        <button type="Save" name="save" id="savebtn" class="savebtn">Save</button>
       </ul>
     </section>
 
     <footer>
-      <h3>Expenses List</h3>
+      <h3 class="history_list">Expenses List</h3>
       <table class="table">
-      <thead>
+      <thead class="table_head">
         <tr>
-          <th scope="col">Date</th>
-          <th scope="col">Time</th>
-          <th scope="col">Tag</th>
-          <th scope="col">Amount</th>
-          <th scope="col">
-            <button type='delete' name="delete" id="deletebtn">Delete</button>
-            <button type='edit' name="edit" id="editbtn">Edit</button>
-            <script src="/js/app.js" type="text/javascript"></script>
+          <th scope="col" class="th_date">Date</th>
+          <th scope="col" class="th_time">Time</th>
+          <th scope="col" class="th_tag">Tag</th>
+          <th scope="col" class="th_amount">Amount</th>
+          <th scope="col" class="th_btn">
+            <button type='delete' name="delete" id="deletebtn" class="deletebtn">Delete</button>
+            <button type='edit' name="edit" id="editbtn" class="editbtn">Edit</button>
+            <script src="/js/app_exp.js" type="text/javascript"></script>
           </th>
        </tr>
      </thead>
      <tbody class="table_body">
        <% historyExpList.forEach(expList => { %>
        <tr>
-         <th><p><%= expList.date %></p></th>
-         <td><p><%= expList.time %></p></td>
-         <td><p><%= expList.tag %></p></td>
-         <td><p><%= expList.amount %></p></td>
+         <td class="tb_date"><p><%= expList.date %></p></td>
+         <td class="tb_time"><p><%= expList.time %></p></td>
+         <td class="tb_tag"><p><%= expList.tag %></p></td>
+         <td class="tb_amount"><p><%= expList.amount %></p></td>
          <td>
-           <input id="checkbox" type="checkbox" value="<%= expList._id %>" onclick="selectedExp()" unchecked>
+           <input class="checkbox_exp" type="checkbox" value="<%= expList._id %>" onclick="selectedExp()" unchecked>
          </td>
       </tr>
       <% }) %>
