--- a/public/html/expenses.html
+++ b/public/html/expenses.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Expenses</title>
   </head>
   <body>
     <header class="header">
       <ul>
-        <li><a href="expenses.html">Expenses</a></li>
-        <li><a href="incomes.html">Incomes</a></li>
+        <li><a href="expensesView">Expenses</a></li>
+        <li><a href="incomesView">Incomes</a></li>
       </ul>
       <h1 class="title">My Money List<span class="title_name">Expenses</span></h1>
     </header>
@@ -40,7 +40,7 @@
           <th scope="col" class="th_btn">
             <button type='delete' name="delete" id="deletebtn" class="deletebtn">Delete</button>
             <button type='edit' name="edit" id="editbtn" class="editbtn">Edit</button>
-            <script src="/js/app_exp.js" type="text/javascript"></script>
+            <script src="../js/app_exp.js" type="text/javascript"></script>
           </th>
        </tr>
      </thead>
