--- a/public/html/incomes.html
+++ b/public/html/incomes.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Incomes</title>
   </head>
   <body>
