--- a/expenses.html
+++ b/expenses.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Incomes</title>
+    <link rel="stylesheet" href="public/css/style.css">
+    <title>Expenses</title>
   </head>
   <body>
     <header class="header">
@@ -11,11 +11,11 @@
         <li><a href="/expenses.html">Expenses</a></li>
         <li><a href="/incomes.html">Incomes</a></li>
       </ul>
-      <h1 class="title">My Money List<span class="title_name">Incomes</span></h1>
+      <h1 class="title">My Money List<span class="title_name">Expenses</span></h1>
     </header>
 
     <section>
-      <h3 class="add_new">Add New income</h3>
+      <h3 class="add_new">Add New expense</h3>
       <ul>
         <span>Date/Time</span>
           <input type="date" name="date" id="inputdate" class="inputdate">
@@ -29,7 +29,7 @@
     </section>
 
     <footer>
-      <h3 class="history_list">Incomes List</h3>
+      <h3 class="history_list">Expenses List</h3>
       <table class="table">
       <thead class="table_head">
         <tr>
@@ -40,19 +40,19 @@
           <th scope="col" class="th_btn">
             <button type='delete' name="delete" id="deletebtn" class="deletebtn">Delete</button>
             <button type='edit' name="edit" id="editbtn" class="editbtn">Edit</button>
-            <script src="../js/app_inc.js" type="text/javascript"></script>
+            <script src="public/js/app_exp.js" type="text/javascript"></script>
           </th>
        </tr>
      </thead>
      <tbody class="table_body">
-       <% historyIncList.forEach(incList => { %>
+       <% historyExpList.forEach(expList => { %>
        <tr>
-         <td class="tb_date"><p><%= incList.date %></p></td>
-         <td class="tb_time"><p><%= incList.time %></p></td>
-         <td class="tb_tag"><p><%= incList.tag %></p></td>
-         <td class="tb_amount"><p><%= incList.amount %></p></td>
+         <td class="tb_date"><p><%= expList.date %></p></td>
+         <td class="tb_time"><p><%= expList.time %></p></td>
+         <td class="tb_tag"><p><%= expList.tag %></p></td>
+         <td class="tb_amount"><p><%= expList.amount %></p></td>
          <td>
-           <input class="checkbox_inc" type="checkbox" value="<%= incList._id %>" onclick="selectedInc()" unchecked>
+           <input class="checkbox_exp" type="checkbox" value="<%= expList._id %>" onclick="selectedExp()" unchecked>
          </td>
       </tr>
       <% }) %>
