--- a/public/incomes.html
+++ b/public/incomes.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/public/style.css">
     <title>Incomes</title>
   </head>
   <body>
@@ -40,7 +40,7 @@
           <th scope="col" class="th_btn">
             <button type='delete' name="delete" id="deletebtn" class="deletebtn">Delete</button>
             <button type='edit' name="edit" id="editbtn" class="editbtn">Edit</button>
-            <script src="../js/app_inc.js" type="text/javascript"></script>
+            <script src="/public/app_inc.js" type="text/javascript"></script>
           </th>
        </tr>
      </thead>
