--- a/public/incomes.html
+++ b/public/incomes.html
@@ -8,6 +8,7 @@
   <body>
     <header class="header">
       <ul>
+        <li><a href="/">Home</a></li>
         <li><a href="/expenses.html">Expenses</a></li>
         <li><a href="/incomes.html">Incomes</a></li>
       </ul>
