change href name, change calss name

--- a/public/incomes.html
+++ b/public/incomes.html
@@ -8,7 +8,7 @@
   <body>
     <header class="header">
       <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/">Logout</a></li>
         <li><a href="/expenses.html">Expenses</a></li>
         <li><a href="/incomes.html">Incomes</a></li>
       </ul>
@@ -16,7 +16,7 @@
     </header>
 
     <section>
-      <h3 class="add_new">Add New income</h3>
+      <h3 class="sec_title">Add New income</h3>
       <ul>
         <span>Date/Time</span>
           <input type="date" name="date" id="inputdate" class="inputdate">
