--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <input type="text" name="login_id" id="login_id">
         <span>Password</span>
         <input type="password" name="login_password" id="login_password">
-        <button type="submit" name="login_submit" class="submitbtn">Submit</button>
+        <span></span>
+        <button type="submit" name="login_submit" id="loginbtn" class="submitbtn">Login</button>
       </ul>
     </section>
     <footer class="outpage_footer">
