--- a/public/signup.html
+++ b/public/signup.html
@@ -8,7 +8,7 @@
   <body>
     <header class="header">
       <ul>
-        <li><a href="/">Login</a></li>
+        <li class="page_title">Signup Page</li>
       </ul>
       <h1 class="title">My Money List<span class="title_name">Signup</span></h1>
     </header>
@@ -16,14 +16,23 @@
       <h2 class="sec_title">Signup</h2>
       <ul>
         <span>User Id</span>
-        <input type="text" name="signup_user_id" id="signup_user_id">
+        <input type="text" name="signup_id" id="signup_id">
         <span>Password</span>
         <input type="password" name="signup_password" id="signup_password">
-        <button type="submit" name="signup_submit" class="submitbtn">Submit</button>
+        <span>Email Address</span>
+        <input type="text" name="signup_email" id="signup_email">
+        <span></span>
+        <button type="submit" name="signup_submit" id="signupbtn" class="submitbtn">Signup</button>
+        <script src="/public/signup.js" type="text/javascript"></script>
       </ul>
     </section>
-    <footer>
-
+    <footer class="outpage_footer">
+      <ul>
+        <span>Already have an account?</span>
+        <li>
+          <a href="/">Login</a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
