--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <input type="password" name="login_password" id="login_password">
         <span></span>
         <button type="submit" name="login_submit" id="loginbtn" class="submitbtn">Login</button>
+        <script src="/public/login.js" type="text/javascript"></script>
       </ul>
     </section>
     <footer class="outpage_footer">
