--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul>
         <span>Don't have an account?</span>
         <li>
-          <a href="/signup.html">Signup</a>
+          <a href="/signup">Signup</a>
         </li>
       </ul>
     </footer>
