--- a/public/incomes.html
+++ b/public/incomes.html
@@ -9,8 +9,8 @@
     <header class="header">
       <ul>
         <li><a href="/">Logout</a></li>
-        <li><a href="/expenses.html">Expenses</a></li>
-        <li><a href="/incomes.html">Incomes</a></li>
+        <li><a href="/expenses">Expenses</a></li>
+        <li><a href="/incomes">Incomes</a></li>
       </ul>
       <h1 class="title">My Money List<span class="title_name">Incomes</span></h1>
     </header>
