--- a/public/signup.html
+++ b/public/signup.html
@@ -10,7 +10,7 @@
       <ul>
         <li class="page_title">Signup Page</li>
       </ul>
-      <h1 class="title">My Money List<span class="title_name">Signup</span></h1>
+      <h1 class="title_userId">My Money List<span class="title_name">Signup</span></h1>
     </header>
     <section>
       <h2 class="sec_title">Signup</h2>
