hide edit button

--- a/public/incomes.html
+++ b/public/incomes.html
@@ -43,7 +43,7 @@
           <th scope="col" class="th_amount">Amount</th>
           <th scope="col" class="th_btn">
             <button type='delete' name="delete" id="deletebtn" class="deletebtn">Delete</button>
-            <button type='edit' name="edit" id="editbtn" class="editbtn">Edit</button>
+            <!-- <button type='edit' name="edit" id="editbtn" class="editbtn">Edit</button> -->
             <script src="/public/app_inc.js" type="text/javascript"></script>
           </th>
        </tr>
